# django_catalog_poetry

./: .env.sample  .gitignore  README.md  all_data.json  blog_app.json  catalog_app.json  catalog_data.json  pyproject.toml
DATA/: all_data.json  blog_data.json  catalog_data.json  data.json  mailing_data.json  new_data.json  order_data.json  users_data.json
app_blog/: admin.py  forms.py  models.py  urls.py  views.py
app_blog/migrations/: 0001_initial.py
app_catalog/: admin.py  apps.py  forms.py  urls.py
app_catalog/migrations/: 0001_initial.py  0002_initial.py
app_catalog/models/: __init__.py  category.py  products.py  provider.py
app_catalog/templatetags/: my_tags.py
app_catalog/views/: __init__.py  category.py  contact.py  product.py  provider.py  vegetables.py
app_mailing/: admin.py  apps.py  forms.py  services.py  urls.py
app_mailing/migrations/: 0001_initial.py  0002_alter_mailingsettings_end_time_and_more.py  0003_mailinglog_answer.py  0004_alter_mailingsettings_options.py  0005_mailingsettings_owner.py  0006_alter_mailingsettings_owner.py
app_order/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
app_users/: admin.py  forms.py  models.py  urls.py  views.py
blog_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog_app/: admin.py  apps.py  forms.py  urls.py  views.py
config/: settings.py  urls.py
mailing_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py
order_app/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users_app/: forms.py  models.py  urls.py  views.py
(+146 files in other folders)
